correction css
le panneau guide était invisible mais prenait quand meme de l'espace sur desktop

--- a/src/style.css
+++ b/src/style.css
@@ -311,6 +311,7 @@ iframe {
 
 #guide {
   visibility: hidden;
+  display: none;
 }
 
 @media screen and (max-width: 500px) {
@@ -495,6 +496,7 @@ iframe {
 
   #guide {
     visibility: visible;
+    display: inline;
     position: absolute;
     z-index: 1000;
     background: white;
